# DiplomaOpenCL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SparseMatrix.cpp  SparseMatrix.h
kernels/: conjugateGradient.cl  conjugateGradientScaled.cl  steepestDescent.cl
lib/: CMakeLists.txt
lib/lib/: OpenCL.lib  OpenCLUtils.lib  OpenCLUtilsCpp.lib
lib/share/cmake/OpenCL/: OpenCLConfigVersion.cmake
lib/share/cmake/OpenCLHeadersCpp/: OpenCLHeadersCppTargets.cmake
lib/share/cmake/OpenCLICDLoader/: OpenCLICDLoaderTargets-release.cmake  OpenCLICDLoaderTargets.cmake
lib/share/cmake/OpenCLUtils/: OpenCLUtilsTargets-release.cmake  OpenCLUtilsTargets.cmake
lib/share/cmake/OpenCLUtilsCpp/: OpenCLUtilsCppTargets-release.cmake  OpenCLUtilsCppTargets.cmake
src/: Algorithms.cpp  Algorithms.h  SparseMatrix.cpp  SparseMatrix.h  Time.h  TimeInfo.h  Timer.cpp  Timer.h  Timer.inl  Utils.cpp  Utils.h  main.cpp
